# fastapi_aip_example

./: README.md  pyproject.toml  requirements.txt
aip/: filter.py  order_by.py  page.py
domino/: block.py
example/: bootstrap.py  config.py
example/adapter/: email_sender.py  orm.py  repository.py  unit_of_work.py
example/domain/: base.py  book.py  publisher.py
example/entrypoints/: fastapi_.py
example/port/: email_sender.py  repository.py  unit_of_work.py
example/service/actions/: commands.py  effects.py  events.py
example/service/blocks/: commands.py  effects.py  events.py
