[tool.poetry]
name = "fastapi_aip_example"
version = "0.1.0"
description = ""
authors = ["Jongbeom-Kwon <bolk9652@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
