[tool.poetry]
name = "fastapi_aip_example"
version = "0.1.0"
description = ""
authors = ["Jongbeom-Kwon <bolk9652@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
loguru = "^0.6.0"
lark = "^1.1.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.42"}
uvicorn = "^0.18.3"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
